NIFI-12639 Removed the use of List.of and Set.of non Java 8 features.